# embassy-nrf-ieee802154

./: LICENSE-APACHE  LICENSE-MIT  README.md
nrf52833/: Cargo.toml  rust-toolchain.toml
nrf52833/.cargo/: config.toml
nrf52840/: Cargo.toml  build.rs
nrf52840/.cargo/: config.toml
