[package]
name = "embassy-nrf52840-ieee802154"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "active-scan"
test = false
bench = false
path = "../src/bin/active-scan.rs"

[dependencies]
byte = "0.2.7"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.1" }
embassy-nrf = {version = "0.1.0", features =  ["defmt", "nrf52840", "time-driver-rtc1", "time"]}
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
ieee802154 = { git = "https://github.com/rust-iot/rust-ieee802.15.4", features = ["defmt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8.4", default-features = false }

[patch.crates-io]
embassy-time = { git = "https://github.com/blueluna/embassy", branch = "feat/radio-ieee802154", package = "embassy-time" }
embassy-executor = { git = "https://github.com/blueluna/embassy", branch = "feat/radio-ieee802154", package = "embassy-executor" }
embassy-nrf = { git = "https://github.com/blueluna/embassy", branch = "feat/radio-ieee802154", package = "embassy-nrf" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = "s"
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "s"
overflow-checks = false
